testdata/baselines/reference/submodule/compiler/returnConditionalExpressionJSDocCast.errors.txt
file.js(2,12): error TS8010: Type annotations can only be used in TypeScript files.
file.js(6,12): error TS8010: Type annotations can only be used in TypeScript files.
file.js(7,14): error TS8010: Type annotations can only be used in TypeScript files.
file.js(10,23): error TS8016: Type assertion expressions can only be used in TypeScript files.


==== file.js (4 errors) ====
    // Don't peek into conditional return expression if it's wrapped in a cast
    /** @type {Map<string, string>} */
               ~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const sources = new Map();
    /**
    
     * @param {string=} type the type of source that should be generated
               ~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @returns {String}
                 ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function source(type = "javascript") {
        return /** @type {String} */ (
                          ~~~~~~
!!! error TS8016: Type assertion expressions can only be used in TypeScript files.
            type
                ? sources.get(type)
                : sources.get("some other thing")
        );
    }